fix buttons again with dark background, update some spacing to match what we have today

--- a/common/common.scss
+++ b/common/common.scss
@@ -92,7 +92,6 @@ body {
   background: var(--secondary);
   border-radius: 8px;
   width: 100%;
-  max-width: 980px;
   padding: 3em 3em 5%;
 
   .archetype-regular & {
@@ -252,7 +251,7 @@ header.d-header {
 
 .d-header-icons .d-icon {
   font-size: 1.25em;
-  color: var(--header-primary);
+  color: var(--secondary);
 }
 
 .d-header-icons .icon:hover {
