--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -296,8 +296,6 @@ nav.post-controls {
 }
 
 #main-outlet-wrapper {
-  margin-top: 2em;
-
   .sidebar-wrapper {
     background-color: var(--secondary);
     border-radius: 8px;
